--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
         <header class="mdl-layout__header">
             <div class="mdl-layout__header-row">
                 <!-- Title -->
-                <span class="mdl-layout-title">Çatlak Sohbet</span>
+                <span class="mdl-layout-title">Voice Chat Application</span>
                 <!-- Add spacer, to align navigation to the right -->
                 <div class="mdl-layout-spacer"></div>
             </div>
